@@ -4,21 +4,20 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.emptyString;
 import static org.hamcrest.Matchers.equalTo;
 
-import java.util.Collections;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
+import com.exasol.projectkeeper.shared.dependencies.BaseDependency.Type;
 import com.exasol.projectkeeper.shared.dependencychanges.DependencyChangeReport;
 import com.exasol.projectkeeper.shared.dependencychanges.NewDependency;
 import com.exasol.projectkeeper.validators.changesfile.NamedDependencyChangeReport;
 
 class DependencyChangeReportRendererTest {
-    private static final DependencyChangeReport REPORT = new DependencyChangeReport(
-            List.of(new NewDependency("com.example", "my-lib", "1.2.3")), Collections.emptyList(),
-            Collections.emptyList(), Collections.emptyList());
-    private static final DependencyChangeReport EMPTY_REPORT = new DependencyChangeReport(Collections.emptyList(),
-            Collections.emptyList(), Collections.emptyList(), Collections.emptyList());
+
+    private static final DependencyChangeReport REPORT = DependencyChangeReport.builder()
+            .typed(Type.COMPILE, List.of(new NewDependency("com.example", "my-lib", "1.2.3"))).build();
+    private static final DependencyChangeReport EMPTY_REPORT = DependencyChangeReport.builder().build();
 
     @Test
     void testRenderSingleSourceReport() {
